<resources>
    <string name="app_name">locationAndGps</string>
    <string name="off">Off</string>
    <string name="address">Address:</string>
    <string name="altitude">Altitude:</string>
    <string name="updates">Updates:</string>
    <string name="_0_003">0.00</string>
    <string name="_0_004">0.00</string>
    <string name="accuracy">Accuracy:</string>
    <string name="_0_00">0.00</string>
    <string name="_0_001">0.00</string>
    <string name="lon">lon:</string>
    <string name="lat">Lat:</string>
    <string name="_0_002">0.00</string>
    <string name="gps_savepower">GPS/SavePower</string>
    <string name="location_updates">Location Updates</string>
    <string name="cell_tower_wifi">Cell Tower + Wifi</string>
    <string name="sensor">Sensor:</string>
    <string name="speed">Speed:</string>
    <string name="todo1">todo1</string>
    <array name="country">
        <item>Ramallah</item>
        <item>Bir Zeit</item>
        <item>Nablus</item>
        <item>Bethlehem</item>
        <item>Hebron</item>
        <item>Jericho</item>
        <item>Tulkarm</item>
        <item>Jenin</item>
        <item>Rafah</item>
        <item>Nissan</item>
        <item>Jerusalem</item>
        <item>Jafa</item>
        <item>Haifa</item>
        <item>Akka</item>
        <item>Safad</item>
        <item>Salfit</item>
        <item>Tiberias</item>
    </array>
</resources>