<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/secondactivity">


    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="513dp"
        android:text="@string/_0_004" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="677dp"
        android:text="@string/_0_002" />

    <TextView
        android:id="@+id/tv_lon"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="-44dp"
        android:layout_marginRight="-44dp"
        android:layout_marginBottom="620dp"
        android:text="@string/_0_001" />

    <TextView
        android:id="@+id/tv_altitude"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="565dp"
        android:text="@string/_0_003" />

    <TextView
        android:id="@+id/tv_accuracy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="463dp"
        android:text="@string/_0_004" />

    <TextView
        android:id="@+id/tv_sensor"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="398dp"
        android:text="@string/cell_tower_wifi" />

    <TextView
        android:id="@+id/tv_updates"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginBottom="341dp"
        android:text="@string/off" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="406dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="108dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_locationsupdates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="247dp"
        android:checked="true"
        android:fontFamily="@font/salsa"
        android:onClick="sw_updates_onclick"
        android:text="@string/location_updates"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="245dp"
        android:fontFamily="@font/salsa"
        android:onClick="gps_onClick"
        android:text="@string/gps_savepower"
        android:textColor="#FFFEFE"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="2dp"
        android:layout_height="2dp"
        app:srcCompat="@drawable/secondactivity" />

    <Button
        android:id="@+id/button4"
        android:layout_width="98dp"
        android:layout_height="68dp"
        android:onClick="Wather"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="310dp"
        android:layout_marginRight="310dp"
        android:layout_marginBottom="-5dp"
        app:backgroundTint="#03FFFFFF" />

    <Button
        android:id="@+id/button5"
        android:layout_width="98dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="back"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="-2dp"
        app:backgroundTint="#03FFFFFF" />

</RelativeLayout>